# residency-platform

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  start.sh  start_all.sh  start_test.sh
apps/api/: README.md  pyproject.toml  reproduce_ingestion.py  test_pubmed.py
apps/api/app/: config.py  main.py
apps/api/app/routers/: analytics.py  atom.py  health.py  ingestion.py  patients.py  templates.py  vault.py
apps/api/app/schemas/: common.py  patient.py
apps/api/app/services/: atom_service.py  attachment_assist.py  attachment_assist_jobs.py  case_registry.py  csv_ingestion.py  event_store.py  file_store.py  note_writer.py  patient_document_index.py  patient_library.py  patient_validator.py  proforma_import.py  projections.py  pubmed_service.py  template_registry.py  vault_indexer.py
apps/api/data/: backfill_patients.csv  patient_document_index.json
apps/api/data/uploads/PAT-TEST-001/: 00f44256f69b4b53bd9aa2e904013bc1_README.md
apps/api/residency_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/.next.bak.1771436939/: BUILD_ID  app-path-routes-manifest.json  export-detail.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next.bak.1771436939/cache/: .tsbuildinfo
apps/web/.next.bak.1771436939/server/: _error.js  server-reference-manifest.js  (+2 more)
docs/: COHORT-DATA-POLICY.md  IMPLEMENTATION-ROADMAP.md  PROTOCOL-INGESTION-MAPPING.md
scripts/: backfill_from_master_chart.py  health_check_parallel.py  redact_phi.py  scan_phi.py
(+108 files in other folders)
