[project]
name = "residency-api"
version = "0.1.0"
description = "FastAPI backend for thesis residency platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0"
]

[tool.setuptools]
packages = ["app"]
